[gd_scene load_steps=10 format=3 uid="uid://cib1rov66awpu"]

[ext_resource type="Script" path="res://Scripts/combat_map_proto.gd" id="1_5ukb4"]
[ext_resource type="PackedScene" uid="uid://ckycyu7t3mvkt" path="res://Scenes/map_tile.tscn" id="1_e7muk"]
[ext_resource type="PackedScene" uid="uid://chu1ridfoelhj" path="res://Assets/mapArrow.gltf" id="3_hftxp"]
[ext_resource type="PackedScene" uid="uid://mx0c7vkqcljs" path="res://Scenes/character.tscn" id="3_nhdyy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ubycf"]
sky_top_color = Color(0.625808, 0.918612, 1, 1)
sky_horizon_color = Color(0.51, 0.689667, 1, 1)
sky_curve = 0.0494816

[sub_resource type="Sky" id="Sky_yy1ip"]
sky_material = SubResource("ProceduralSkyMaterial_ubycf")

[sub_resource type="Environment" id="Environment_fdg8w"]
background_mode = 2
sky = SubResource("Sky_yy1ip")

[sub_resource type="BoxShape3D" id="BoxShape3D_i5bxd"]
size = Vector3(405.999, 1, 3.04644)

[sub_resource type="BoxMesh" id="BoxMesh_nuy5p"]

[node name="CombatMapProto" type="Node3D"]
script = ExtResource("1_5ukb4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, 0.183013, -0.183013, 0, 0.707107, 0.707107, 0.258819, -0.683013, 0.683013, 0, 3.84087, 0)
shadow_enabled = true

[node name="Pivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866026, 0, -0.866026, 0.5, 1, 0, 1)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 7.45058e-08, 0, -7.45058e-08, 1, 0, 0, 6)
environment = SubResource("Environment_fdg8w")
fov = 45.0

[node name="Mockup" type="Node3D" parent="."]
visible = false

[node name="MapTile" parent="Mockup" instance=ExtResource("1_e7muk")]

[node name="MapTile2" parent="Mockup" instance=ExtResource("1_e7muk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="MapTile3" parent="Mockup" instance=ExtResource("1_e7muk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="MapTile4" parent="Mockup" instance=ExtResource("1_e7muk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)

[node name="Character" parent="Mockup" instance=ExtResource("3_nhdyy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Debug" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LastMapTileLabel" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 176.0
offset_top = 32.0
offset_right = 216.0
offset_bottom = 55.0
text = "(0,0)"

[node name="InMapTileLabel" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 176.0
offset_top = 58.0
offset_right = 216.0
offset_bottom = 81.0
text = "false"

[node name="DebugLabel" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 102.0
offset_bottom = 81.0
text = "lastMapTile:
inMapTile:
selectedTile:
playerPopulatedTiles:"
horizontal_alignment = 2

[node name="SelectedTileLabel" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 176.0
offset_top = 84.0
offset_right = 216.0
offset_bottom = 107.0
text = "null"

[node name="PlayerPopulatedTilesLabel" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 176.0
offset_top = 108.0
offset_right = 216.0
offset_bottom = 131.0
text = "[]"

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.308746, 0, 0.0161858)
shape = SubResource("BoxShape3D_i5bxd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(406.504, 0, 0, 0, 1, 0, 0, 0, 332.145, 0, 0, 0)
mesh = SubResource("BoxMesh_nuy5p")

[node name="MapArrow" parent="." instance=ExtResource("3_hftxp")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 2.3, 0)
visible = false

[node name="Highlight" type="Marker3D" parent="."]
visible = false

[node name="SpotLight3D" type="SpotLight3D" parent="Highlight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.5, 0)
light_energy = 30.0
spot_range = 3.37854
spot_angle = 26.9969
